# willy_assistant

./: Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
tests/: factorize.py
willy_assistant/: app.py  app_test.py  log.py  main.py
willy_assistant/methods/: authorization.py  clean_folder.py  clean_folder_v2.py  registration.py
willy_assistant/templates/: dashboard.html  index.html  registration.html  signin.html  signin_admin.html
