[tool.poetry]
name = "willy-assistant"
version = "0.1.0"
description = "Personal Assistant Willy"
authors = ["PyCrafters"]
readme = "README.md"
packages = [{include = "willy_assistant"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.3.0"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
